--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,10 @@
 title: 任向春风尽意啼，永嘉山水复相依，强盛举世皆如梦
 email: renyongqiang.china@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ android developer
+ linux developer
+ java developer
+ c developer
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jenyongchiang
