--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 任向春风尽意啼，永嘉山水复相依，强盛举世皆如梦
+title: 永嘉山水复相依，强盛举世皆如梦
 email: renyongqiang.china@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
  android developer
